--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(90deg, #ff8b00 0%, #ffffff 100%);
+  background: linear-gradient(90deg, #00ff6e 0%, #ffffff 100%);
   z-index: -1;
   animation: waveAnimation 5s linear infinite alternate; /* Adicione esta linha para a animação */
 }
